deploy/poedata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poedata-service
spec:
  selector:
    app: poedata
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
