deploy/poedata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/poedata/
        pathType: Prefix
        backend:
          service:
            name: poedata-service
            port:
              number: 5000
  ingressClassName: nginx
